# SQLite-2.5.0

./: CMakeLists.txt  README.MD
src/: sqlite.h.in
